# copy-framework-to-bundle

./: CMakeLists.txt  baz.cpp  boo.cpp  foo.cpp
cmake/module/: copy_framework_to_bundle.cmake
